--- a/paper.tex
+++ b/paper.tex
@@ -86,29 +86,34 @@ dolsonem@msu.edu} % email of corresponding author
 
 \section{Introduction}
 
-Evolution is an emergent effect of events (\textit{e.g.} replication, variation, and competition) that occur on a much finer-grained temporal scale. While evolution's emergent nature is a large part of why it is so fascinating, it also presents challenges to studying the short-term mechanisms that govern long-term results. In computational evolutionary systems, we theoretically have adequate data to untangle these mechanisms. In practice, though, gathering appropriate data to do so can be challenging. Moreover, because of the vast difference between the scales that evolutionary causes and effects can occur on, the quantity of such data can be overwhelming. Both of these problems can be mitigated with a standardized set of diagnostic summary metrics that paint a picture of shorter-term evolutionary dynamics within a population. Here, we suggest a suite of such metrics that operate on lineages and phylogenies. We then use experimental results to provide an intuition for what they can tell us about evolution.
+Evolution is an emergent effect of events (\textit{e.g.} replication, variation, and competition) that occur on a much finer-grained temporal scale. While evolution's emergent nature is a large part of why it is so fascinating, it also presents challenges to studying the short-term mechanisms that govern long-term results. In computational evolutionary systems, we theoretically have adequate data to untangle these mechanisms. In practice, though, gathering appropriate data to do so can be challenging. Moreover, because of the vast difference between the scales that evolutionary causes and effects can occur on, the quantity of such data can be overwhelming. Both of these problems can be mitigated with a standardized set of diagnostic summary metrics that paint a picture of shorter-term evolutionary dynamics within a population. Here, we suggest a suite of metrics that operate on lineages and phylogenies. We then use experimental results to provide an intuition for what they can tell us about evolution.
 
-% Useful suites of metrics in ALIFE?
-% - Activity statistics
-% - ... 
+A lineage describes a continuous line of descent, linking ancestors and their descendants. A complete lineage can provide a post-hoc, step-by-step guide to the evolution of an extant organism where each step involves replication and inherited variation. Indeed, lineage analyses are a powerful tool for disentangling evolutionary dynamics in both natural and digital systems; digital systems, however, allow for fine-grained lineage tracking at resolutions that are impossible in modern wet lab experiments, allowing us to replay the tape of life in exacting detail and to tease apart the evolutionary recipe for whatever complex feature or phenomenon we happen to be interested in~\citep{mcphee_using_2016}. 
+In a more famous example, Lenski \textit{et al.}, used the lineage of an evolved digital organism in Avida to tease apart, step-by-step how a complex feature (the capacity to perform the equals logical operation) emerged~\citep{lenski_evolutionary_2003}. 
 
-A lineage describes a continuous line of descent, linking ancestors and their descendants. A complete lineage can provide a post-hoc, step-by-step guide to the evolution of an extant organism where each step involves replication and inherited variation. Indeed, lineage analyses are a powerful tool for disentangling evolutionary dynamics in both natural and digital systems; digital systems, however, allow for fine-grained lineage tracking at resolutions that are impossible in modern wet lab experiments, allowing us to replay the tape of life in exacting detail and to tease apart the evolutionary recipe for whatever complex feature or phenomenon we happen to be interested in. 
-Yet, tracking the full details of a single lineage, much less a population of lineages, can be computationally expensive and will inevitably generate an unwieldy amount of data that can be challenging to visualize and interpret [CITATIONS].
-% @AML: Need a transition from here to next paragraph about how diagnostic/summary statistics can help
-% @SPJ: Something like this?
-%@ELD That looks like a good start, but we still need the part where we  actually discuss our methodology for creating these metrics. I'm going to try splitting it off into its own paragraph
-
-Summary statistics can help alleviate these issues by enabling the user to focus on aggregate trends across a population rather than needing to examine each individual. The question is how to effectively summarize what is essentially a path through fitness space. A useful abstraction is to treat the path as a sequence of states. Here, we will use phenotypes and genotypes as the states in the sequence, but we could just as easily some other descriptor of the lineage's position in the fitness landscape at a given point in time. % @ELD: Should we cite Alex's phenotypic plasticity stuff here? @AML: Nah, this paragraph is pretty sleek in making its points. I think the metrics section might be more appropriate. We can use it as an example. 
+Yet, tracking the full details of a single lineage, much less a population of lineages, can be computationally expensive and will inevitably generate an unwieldy amount of data that can be challenging to visualize and interpret~\citep{mcphee_visualizing_2016}.
+Summary statistics can help alleviate these issues by enabling the user to focus on aggregate trends across a population rather than needing to examine each individual's lineage. The question is how to effectively summarize what is essentially a path through fitness space. A useful abstraction is to treat the path as a sequence of states. Here, we will use phenotypes and genotypes as the states in the sequence, but we could just as easily use some other descriptor of the lineage's position in the fitness landscape at a given point in time.
 With this abstraction in hand, a few metrics are easily formalized: the number of unique states, the number of transitions between states, and the amount of time spent in each state. 
 Additionally, we may care about how the transitions between states happened. What mutations lead to them? Were those mutations beneficial, deleterious, or neutral at the time? Here, we choose a subset of these metrics that we expect will be particularly useful to explore further.
 
-Whereas a lineage represents the evolutionary history that lead up to a single individual, a phylogeny represents the evolutionary history of an entire population. Measurements that summarize phylogenies can provide useful insight into population-level evolutionary dynamics, such as diversification and co-existence among different clades. A variety of useful phylogeny measurements have already been developed by biologists~\citep{tucker_guide_2017}. These measurements tend to treat the phylogeny as a graph and make calculations about its topology. Tucker \textit{et al.} group them into three broad categories: assessments of the quantity of evolutionary history represented by a population, assessments of the amount of divergence within that evolutionary history, and assessments of the topological regularity of the phylogenetic tree. Such measurements can help quantify the behavior of the population as a whole, providing insight into interactions between its members. Thus, they are useful indicators of the presence of various types of eco-evolutionary dynamics.
-% @AML: I think the next bit (just moved it) might belong in the metrics section. Instead, we might want a little more elaboration on each of the categories of metrics.
+Whereas a lineage represents the evolutionary history of a single individual, a phylogeny represents the evolutionary history of an entire population. Measurements that summarize phylogenies can provide useful insight into population-level evolutionary dynamics, such as diversification and co-existence among different clades. A variety of useful phylogeny measurements have already been developed by biologists~\citep{tucker_guide_2017}. These measurements tend to treat the phylogeny as a graph and make calculations about its topology. Tucker \textit{et al.} group them into three broad categories: assessments of the quantity of evolutionary history represented by a population, assessments of the amount of divergence within that evolutionary history, and assessments of the topological regularity of the phylogenetic tree. Such measurements can help quantify the behavior of the population as a whole, providing insight into interactions between its members. Thus, they are useful indicators of the presence of various types of eco-evolutionary dynamics.
+%@AML: I think the next bit (just moved it) might belong in the metrics section. Instead, we might want a little more elaboration on each of the categories of metrics.
+%@ELD: Is that too handwavy?
+%@AML: Nah! Handwaving is just what we needed! 
 
+Here, we present three types of lineage measurements: lineage length, mutation accumulation, and phenotypic volatility. Additionally, we suggest the adoption of four phylogeny measurements from biology: most-recent common ancestor depth, phylogenetic richness, phylogenetic divergence, and phylogenetic regularity. For each metric, we discuss its application and our intuitions for what it can tell us about evolution. We evaluate our intuitions on a set of two-dimensional, real-valued optimization problems under a range of mutation rates and selection strengths. For this work, we restrict our attention to asexually reproducing populations; however, we make suggestions as to how these metrics can be extended to sexual populations. 
 
-Here, we present three types of lineage measurements: lineage length, mutation accumulation, and phenotypic volatility. Additionally, we present four phylogeny measurements: most-recent common ancestor depth, phylogenetic richness, phylogenetic divergence, and phylogenetic regularity. For each metric, we discuss its application and our intuitions for what it can tell us about evolution. We evaluate our intuitions on a set of two-dimensional, real-valued optimization problems under a range of mutation rates and selection strengths. For this work, we restrict our attention to asexually reproducing populations; however, we make suggestions as to how these metrics can be extended to sexual populations. 
+%@AML:  It might be nice to wrap this section up with a little bit of a 'call to action'/'why should you care about this as a community'
+In addition to demonstrating a range of metrics that are immediately applicable and useful to digital evolution research, we hope this work begins a conversation within the computational evolution community about how we quantify, interpret, and compare observed evolutionary histories. There has been extensive efforts to improve our ability to visualize both lineages and phylogenies [CITATIONS], which are incredibly valuable for building intuitions and qualitatively understanding the dynamics embedded in a population's evolutionary history. However, we are unaware of efforts to formalize a suite of quantitative lineage- and phylogeny-related metrics for computation evolution. Indeed, .... % people have done stuff with lineages
+% - often a component of a larger experiment-specific analysis or limited to qualitative descriptions/visualizations
+% - well-defined metrics not only provide valuable tools for teasing apart evolutionary dynamics, they also facilitate allow us to move away from exclusively qualitative descriptions/understandings of results ==> better quantitative understanding/statistics ==> better hypothesis testing
+% - facilitate comparisons among systems. 
+% - Something about activity metrics?
 
 \section{Metrics}
+
+Code for all of our metrics is open source and available in the Empirical library (https://github.com/devosoft/Empirical). Empirical is a C++ library built to facilitate writing efficient and easily sharable scientific software. To facilitate including useful features without excessive overhead, Empirical is header-only, meaning these metrics can be imported into an existing project with minimal effort.
+% [QUESTION] @AML: Is it actually true that someone could include these metrics with minimal effort? How much of Empirical would it impose on the user? Just the systematics manager? 
 
 \subsection{Lineage Metrics}
 % Outlining some points to (maybe) make here; probably too bogged down in details; not even sure we want to talk about lineages as graphs:
@@ -129,14 +134,13 @@ Here, we present three types of lineage measurements: lineage length, mutation a
 %      - Still further abstraction: sequence of a particular aspect of genotype (e.g. genetic marker)/phenotype (e.g. location) along lineage
 %  - We discuss three classes of lineage metrics within this framework: lineage length, mutation accumulation, and phenotypic volatility. 
 %  - For each, we discuss our intuition for what they can tell us (alone and in combination) about evolution. 
-Each of the three lineage metrics we discuss --- lineage length, mutation accumulation, and phenotypic volatility --- reduces a lineage to a linear sequence of states where each state represents an individual or a continuous sequence of individuals that share some common genotypic or phenotypic characteristic of interest. While we limit our focus to three lineage metrics, this abstraction places lineages in a form suitable for a wide range of measurements, including the direct application of many data mining techniques designed to operate over sequences. % @AML: TODO - will want to come up with a few examples/citations for such data mining techniques (can refer to data mining class notes/textbook). 
+Each of the three lineage metrics we discuss --- lineage length, mutation accumulation, and phenotypic volatility --- reduces a lineage to a linear sequence of states where each state represents an individual or a continuous sequence of individuals that share some common genotypic or phenotypic characteristic of interest. While we limit our focus to three lineage metrics, this abstraction places lineages in a form suitable for a wide range of measurements, including the direct application of many data mining techniques designed to operate over sequences such as sequential pattern mining, trend analysis, \textit{et cetera} \citep{han2011data}. 
 
-% @AML: this while paragraph could use some sanity checking/smoothing out. 
 Only lineages consisting of asexually reproducing ancestors where genetic material is exclusively vertically transmitted can be directly abstracted as a \textit{linear sequence} of states. 
 Sexual reproduction (and any form of horizontal gene transfer) complicates matters significantly as such lineages are more appropriately represented by trees rooted at the extant organism, branching for each contributor of genetic material. 
-For each metric we present here, we limit our discussion to asexual populations; however, we suggest two approaches for generalizing to sexual populations: apply a lossy compression to reduce sexual lineages into linear sequences or extend our application of the metrics to operate over non-linear (tree) structured lineages. 
-Sexual lineages can be compressed into linear sequences of states by modeling sexual reproduction events as asexual reproduction events, designating one parent to be a part of the lineage and considering the genetic contributions of other parents as sources of genetic variation (mutations). As previously stated, this approach is lossy, discarding potentially important parentage information. 
-Alternatively, we can extend our metrics to operate over the more complex state sequences that constitute the lineages of sexually reproducing organisms. One such approach would be to consider all possible ancestor paths for an extant individual, taking an average of a measurement over each path. 
+For each metric we present here, we limit our discussion to asexual populations; however, we suggest two approaches for generalizing these lineage metrics to sexual populations: apply a lossy compression to reduce sexual lineages into linear sequences or extend our application of the metrics to operate over non-linear (tree) structured lineages. 
+Sexual lineages can be compressed into linear sequences of states by modeling sexual reproduction events as asexual reproduction events, designating one parent to be a part of the lineage and considering the genetic contributions of other parents as sources of genetic variation (mutations). The primary downside to this approach is its lossy-ness (i.e. the fact that it discards potentially important parentage information). 
+Alternatively, we can extend our metrics to operate over the more complex state sequences that constitute the lineages of sexually reproducing organisms. One such approach would be to consider all possible ancestor paths for an extant individual, calculating a given metric for each of them and then averaging the resulting values together. Assessing the efficacy of these and potentially other approaches would be a useful line of research to pursue in the future.
 
 \subsubsection{Lineage Length}
 % Define/explanation
@@ -159,16 +163,23 @@ Alternatively, we can extend our metrics to operate over the more complex state 
 %           - change in genetic markers
 %           - Distributions of above two lengths can tell you useful things about drift, selection, etc.
 
-Lineage length describes the number of ancestral states traversed by a lineage. If a state represents a single individual along a lineage, lineage length is a measure of the number of generations on a lineage. This form of the lineage length metric is most useful in systems where generational turnover is not algorithmically determined but instead determined by the life history strategies of organisms. In these systems, lineage length can provide a proxy for replication rate where, for lineages that span equal lengths of time, longer lineages imply faster replication rates (\textit{e.g.} an r replicator strategy) and shorter lineages imply slower replication rates (\textit{e.g.} a k replicator strategy). 
+Lineage length describes the number of ancestral states traversed by a lineage. If a state represents a single individual along a lineage, lineage length is a measure of the number of generations on a lineage. This form of the lineage length metric is most useful in systems where generational turnover is not algorithmically determined but instead determined by the life history strategies of organisms. In these systems, lineage length can provide a proxy for replication rate where, for lineages that span equal lengths of time, longer lineages imply faster replication rates and shorter lineages imply slower replication rates. 
+%@ELD: I've always heard these called r- and k- selected rather than replicator, but I'm totally willing to believe these terms are used too.
+%@AML: Yup. I have no idea if I've ever heard them referred to as 'r-replicator vs. k-replicator'. I'm going to get rid of the two parentheticals for now.
 
-Lineage length becomes an increasingly flexible and informative metric if we begin to consider more abstract definitions of an ancestral state along a lineage. For example, we might measure the length of a lineage according to a particular phenotypic trait or genetic marker where an ancestral state represents a temporally continuous sequence of individuals that share the characteristics of interest.  
+Lineage length becomes an increasingly flexible and informative metric if we begin to consider more abstract definitions of an ancestral state along a lineage. 
+We might measure lineage length where an ancestral state represents a temporally continuous sequence of individuals that share a phenotypic or genotypic characteristic of interest. In these cases, lineage length only increases if the characteristic of interest changes from parent to offspring. For example, in an environment where organisms must perform a set of tasks to be successful, we might define ancestral state to be the set of tasks performed by an individual (\textit{e.g.} the set of logic operations performed by a digital organism in the default logic 9 Avida environment). In this scenario, lineage length would only increase when the set of tasks performed by an ancestor changes, compressing sequential ancestors that perform the identical sets of tasks into a single ancestral state. 
+% This could be made very clear with a good example here. 
+%@ELD Maybe I'm just getting tired, but I didn't quite follow that last sentence
+%@AML: It was definitely hard to follow. Hopefully it's better now? 
+%  -- Still could use a sentence about what the measure might tell us in the given example. 
 
 \subsubsection{Mutation Accumulation}
 Mutation Accumulation defines a set of measurements that track mutational changes across a lineage. These changes can be measured in a variety of ways, such as the magnitude of the change (for real-valued genomes), or the total count of changes (for discrete-valued genomes). The type of a mutation can also be tracked, and can provide insight into the distribution of mutation types for a given lineage. Measures of mutation accumulation along the lineages of successful extant individuals can help to tease apart the relative importance of different types of mutational events when compared to what is expected by chance. 
 
-In conjunction with collected fitness information, the class of a mutation (\textit{e.g.} beneficial, deleterious, or neutral) can also be tracked. Different evolutionary conditions are expected to cause different distributions of mutations along a lineage [CITE barrick and lenski genome dynamics]; deviations revealed by measures of mutation accumulation can act as a barometer for unexpected evolutionary dynamics.   
+In conjunction with collected fitness information, the class of a mutation (\textit{e.g.} beneficial, deleterious, or neutral) can also be tracked. Different evolutionary conditions are expected to cause different distributions of mutations along a lineage~\citep{barrick2013genome}; deviations revealed by measures of mutation accumulation can act as a barometer for unexpected evolutionary dynamics.   
 The number and magnitude of deleterious mutations along a lineage can both tell us something about the ruggedness of the fitness landscape as well as how well a lineage was able to cross fitness valleys. 
-An elevated measure of neutral mutations relative to beneficial or deleterious mutations might indicate that a lineage is spending most of its time drifting in a neutral fitness landscape. 
+Similarly, an elevated measure of neutral mutations relative to beneficial or deleterious mutations can tell us that the fitness landscape has a large neutral area that the lineage is spending most of its time drifting around. 
 
 
 
@@ -183,9 +194,9 @@ An elevated measure of neutral mutations relative to beneficial or deleterious m
 
 \subsubsection{Phenotypic Volatility}
 
-Phenotypic volatility addresses the rate at which the lineage changes phenotype. In systems with discrete/categorical phenotypes, this can be measured by summing the number of times the phenotype changes. A related but subtly different measurement in such systems is the number of unique phenotypes on a lineage. In most cases, these values will be very similar. A discrepancy between them, however, would be a clear signal of interesting dynamics. Specifically, it would suggest that the lineage were in a portion of the landscape where it could rapidly switch among different phenotypes. Such behavior could be indicative of some form of evolutionary bet-hedging.
+Phenotypic volatility addresses the rate at which the lineage changes phenotype (although the same concept can be applied to other types of state). In systems with discrete/categorical phenotypes, this can be measured by summing the number of times the phenotype changes. A related but subtly different measurement in such systems is the number of unique phenotypes on a lineage. In most cases, these values will be very similar. A discrepancy between them, however, would be a clear signal of interesting dynamics. Specifically, it would suggest that the lineage was in a portion of the landscape where it could rapidly switch among different phenotypes. Such behavior could be indicative of some form of evolutionary bet-hedging.
 
-In systems with continuous-valued phenotypes, a subtly different approach is needed to measure phenotypic volatility. 
+In systems with continuous-valued phenotypes, a subtly different approach is needed to measure phenotypic volatility, because there are no discrete state transitions. Instead, we can measure the overall variance in phenotype along a lineage. In some cases, it may be desirable to smooth out the noise inherent in a real-valued phenotype. We can do so by instead taking the variance of the rolling mean of fitness, to more closely approximate the idea of measuring phase transitions.
 % TODO
 
 % Define/describe
@@ -235,7 +246,14 @@ Measurements of phylogenetic divergence quantify how distinct the taxa in the po
 Measurements of phylogenetic regularity quantify how balanced the branches of the phylogeny are, and are often the variances of values that can be calculated for individual taxa. Just as the mean of the pairwise distances between all taxa in the population is a measurement of phylogenetic divergence, taking their variance is a measurement of phylogenetic regularity. The same is true of the variance of evolutionary distinctiveness across the population.
 
 \section{Test Problems}
-To understand the metrics defined above, the test problems used need to be well understood and studied. The benchmark functions from the GECCO Competition on Niching Methods meet both of these requirements and allow us to visualize the actual fitness landscape, due to the low dimensionality of the problems ~\citep{li_benchmark_2013}. For each problem, the X and Y coordinates offered by a given organism are translated by the function into a fitness value. We chose a diverse subset of these functions (Himmelblau, Shubert, Composition Function 2, and Six-Humped Camel Back) as our test problems in order to gain a broad understanding of our metrics. We used the implementations of these problems at https://github.com/mikeagn/CEC2013/ (C++ for fitness calculations during evolution, Python for post-hoc analysis).
+To understand the metrics defined above, the test problems used need to be well understood and studied. The benchmark functions from the GECCO Competition on Niching Methods meet both of these requirements and allow us to visualize the actual fitness landscape, due to the low dimensionality of the problems ~\citep{li_benchmark_2013}. For each problem, the X and Y coordinates offered by a given organism are translated by the function into a fitness value. We chose a diverse subset of these functions (Himmelblau, Shubert, Composition Function 2, and Six-Humped Camel Back) as our test problems in order to gain a broad understanding of our metrics. We used the implementations of these problems at https://github.com/mikeagn/CEC2013/ (C++ for fitness calculations during evolution, Python for post-hoc analysis). Figure \ref{TODO} shows the fitness landscapes defined by each of our four chosen test problems. 
+
+% @AML: It would be neat to have a tournament size = population size treatment (pure hill climbing)
+For each test problem, we evolved populations of 1000 digital organisms under a range of mutation rates and selection strengths for 5000 generations. Each digital organism's genome consisted of two floating point numbers that defined its position in the fitness landscape. To determine which organisms reproduced each generation, we used tournament selection. We evolved populations under five different tournament sizes: one, two, four, eight, and sixteen.  Tournament size represents strength of selection where higher tournament sizes correspond to a higher strength of selection and lower tournament sizes correspond to a lower strength of selection. A tournament size of one is equivalent to no selection pressure (\textit{i.e.} every organism in the population has an equal chance of being selected to reproduce). Organisms selected to reproduce did so asexually. Each value in an offspring's genome was mutated by adding noise given by a normal distribution with a mean of 0; the `mutation rate' of a treatment defined the standard deviation used to defined this normal distribution and was given as a proportion of the test problem's domain.  For each problem and tournament size, we evolved populations at eight mutation rates: \textbf{TODO}. 
+% @AML: Don't love how I've phrased mutation rate sentences. 
+
+% @AML: if room, it might be helpful to have a cartoon figure that gives all of our treatments
+%		-- I'm imagining a table where we have axes/arrows that show 'increasing selection' vs. 'increasing mutation rate'
 
 \section{Implementation}
 
@@ -257,12 +275,14 @@ We analyzed trends in our metrics using the R Statistical Computing Language~\ci
 
 \section{Results and Discussion}
 % Changing mutation: here's what happens when we change mutation on each problem
-\begin{figure}
-\includegraphics[width=3.5in]{figs/mean_deleterious_mutation.png}
-\end{figure}
-\begin{figure}
-\includegraphics[width=3.5in]{figs/mrca_depth_mutation.png}
-\end{figure}
+\begin{figure*}
+\includegraphics[width=7in]{figs/all_mutation_rate.png}
+\caption{Values of example metrics across different mutation rates for each of the four problems. Circles are medians and vertical lines show inter-quartile range.}
+\end{figure*}
+
+% \begin{figure}
+% \includegraphics[width=3.5in]{figs/mrca_depth_mutation.png}
+% \end{figure}
 
 % \begin{figure}
 % \includegraphics[width=3.5in]{figs/variance_deleterious_mutation_rate.png}
@@ -276,12 +296,13 @@ We analyzed trends in our metrics using the R Statistical Computing Language~\ci
 % - Metric 2
 % ... 
 
-\begin{figure}
-\includegraphics[width=3.5in]{figs/mean_deleterious_ts.png}
-\end{figure}
-\begin{figure}
-\includegraphics[width=3.5in]{figs/mrca_ts.png}
-\end{figure}
+\begin{figure*}
+\includegraphics[width=7in]{figs/all_ts.png}
+\caption{Values of example metrics across different tournament sizes for each of the four problems. Circles are medians and vertical lines show inter-quartile range.}
+\end{figure*}
+% \begin{figure}
+% \includegraphics[width=3.5in]{figs/mrca_ts.png}
+% \end{figure}
 
 % Changing selection
 % - Metric 1
@@ -298,6 +319,6 @@ We analyzed trends in our metrics using the R Statistical Computing Language~\ci
 
 \footnotesize
 \bibliographystyle{apalike}
-\bibliography{Zotero} % replace by the name of your .bib file
+\bibliography{Zotero,bibliography} % replace by the name of your .bib file
 
 \end{document}
