Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -178,7 +178,7 @@ We might measure lineage length where an ancestral state represents a temporally
 Mutation Accumulation defines a set of measurements that track mutational changes across a lineage. These changes can be measured in a variety of ways, such as the magnitude of the change (for real-valued genomes), or the total count of changes (for discrete-valued genomes). The type of a mutation can also be tracked, and can provide insight into the distribution of mutation types for a given lineage. Measures of mutation accumulation along the lineages of successful extant individuals can help to tease apart the relative importance of different types of mutational events when compared to what is expected by chance. 
 
 In conjunction with collected fitness information, the class of a mutation (\textit{e.g.} beneficial, deleterious, or neutral) can also be tracked. Different evolutionary conditions are expected to cause different distributions of mutations along a lineage~\citep{barrick2013genome}; deviations revealed by measures of mutation accumulation can act as a barometer for unexpected evolutionary dynamics.   
-The number and magnitude of deleterious mutations along a lineage can both tell us something about the ruggedness of the fitness landscape as well as how well a lineage was able to cross fitness valleys. 
+The number and magnitude of deleterious mutations along a lineage can both tell us something about the ruggedness of the fitness landscape as well as how well a lineage was able to cross fitness valleys~\citep{. 
 Similarly, an elevated measure of neutral mutations relative to beneficial or deleterious mutations can tell us that the fitness landscape has a large neutral area that the lineage is spending most of its time drifting around. 
 
 
