--- a/analysis/data_analysis.Rmd
+++ b/analysis/data_analysis.Rmd
@@ -26,16 +26,28 @@ real_value_data$seed <- as.factor(real_value_data$seed)
 real_value_data$elite <- as.factor(real_value_data$elite)
 #real_value_data$mutation_rate <- as.factor(real_value_data$mutation_rate)
 tournament_data <- subset(real_value_data, real_value_data$selection == "Tournament" & real_value_data$elite == 0)
-melted_tournament_data <- melt(tournament_data, id.vars = c("update", "selection", "seed", "elite", "mutation_rate", "le", "p", "problem", "g", "ts"))
-end_points_vars_of_interest <- melted_tournament_data %>% filter(update==5000) %>% filter(variable %in% c("mrca_depth", "dominant_deleterious_steps", "mean_evolutionary_distinctiveness", "variance_evolutionary_distinctiveness", "current_phylogenetic_diversity", "mean_pairwise_distance", "variance_pairwise_distance", "ave_depth"))
+tournament_endpoints <- filter(tournament_data, update==5000)
 
-labels <- c(current_phylogenetic_diversity = "Phylogenetic diversity", dominant_deleterious_steps = "Dominant deleterious steps", mean_evolutionary_distinctiveness="Mean evo. distinctiveness", mean_pairwise_distance="Mean pairwise distance", mrca_depth="MRCA depth", variance_evolutionary_distinctiveness="Variance evo. distinctiveness", variance_pairwise_distance = "Variance pairwise distance")
+all_dom_data <- read_csv("~/repos/ALife2018-Lineage/analysis/cec_python_library/all_dom_data.csv")
+all_dom_data$update <- 5000
+all_dom_data$seed <- all_dom_data$RANDOM_SEED
+all_dom_data$RANDOM_SEED <- NULL
+all_dom_data$PROBLEM <- NULL
+all_dom_data$DATA_DIRECTORY <- NULL
+all_dom_data$RUN_MODE <- NULL
+all_dom_data$path <- NULL
+
+tournament_endpoints <- merge(tournament_endpoints, all_dom_data)
+melted_tournament_data <- melt(tournament_endpoints, id.vars = c("update", "selection", "seed", "elite", "mutation_rate", "le", "p", "problem", "g", "ts", "TOURNAMENT_SIZE", "FITNESS_INTERVAL", "RESOURCE_SELECT__OUTFLOW", "MUTATION_STD", "SELECTION_METHOD", "RESOURCE_SELECT__RES_AMOUNT", "HINT_GRID_RES", "RESOURCE_SELECT__RES_INFLOW", "LEXICASE_EPSILON", "SYSTEMATICS_INTERVAL", "RESOURCE_SELECT__FRAC", "RESOURCE_SELECT__COST", "RESOURCE_SELECT__MAX_BONUS", "POP_SNAPSHOT_INTERVAL", "POP_SIZE", "ELITE_SELECT__ELITE_CNT", "GENERATIONS"))
+end_points_vars_of_interest <- melted_tournament_data %>%  filter(variable %in% c("mrca_depth", "dominant_deleterious_steps", "mean_evolutionary_distinctiveness", "variance_evolutionary_distinctiveness", "current_phylogenetic_diversity", "mean_pairwise_distance", "variance_pairwise_distance", "phenotypic_volatility"))
+
+labels <- c(current_phylogenetic_diversity = "Phylogenetic diversity", dominant_deleterious_steps = "Dominant deleterious steps", mean_evolutionary_distinctiveness="Mean evo. distinctiveness", mean_pairwise_distance="Mean pairwise distance", mrca_depth="MRCA depth", variance_evolutionary_distinctiveness="Variance evo. distinctiveness", variance_pairwise_distance = "Variance pairwise distance", phenotypic_volatility="Phenotypic volatility")
 
 
 ```
 
 ```{r}
-ggplot(subset(end_points_vars_of_interest, end_points_vars_of_interest$mutation_rate==.001), aes(x=ts, y=value, color=problem)) + stat_summary(fun.y = median, fun.ymin = function(x){quantile(x)[2]}, fun.ymax=function(x){quantile(x)[4]}) +stat_summary(geom="line", fun.y=median)+ theme_classic() + scale_x_log10("Tournament size", breaks=c(2,4,8,16)) + scale_y_continuous("", labels=comma) + facet_wrap(~variable, scales="free_y", labeller = labeller(variable=labels)) + scale_color_discrete("Problem") + theme(legend.position = "bottom")
+ggplot(subset(end_points_vars_of_interest, end_points_vars_of_interest$mutation_rate==.001), aes(x=ts, y=value, color=problem, group=problem)) + stat_summary(fun.y = median, fun.ymin = function(x){quantile(x)[2]}, fun.ymax=function(x){quantile(x)[4]}) +stat_summary(geom="line", fun.y=median)+ theme_classic() + scale_x_log10("Tournament size", breaks=c(2,4,8,16)) + scale_y_continuous("", labels=comma) + facet_wrap(~variable, scales="free_y", labeller = labeller(variable=labels)) + scale_color_discrete("Problem") + theme(legend.position = "bottom")
 ggsave("../figs/all_ts.png", width=7, height=5) 
 ```
 
