Update on Overleaf.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -15,3 +15,36 @@
   year={2013},
   publisher={Nature Publishing Group}
 }
+
+@inproceedings{rainey2011evolutionary,
+  title={The evolutionary emergence of stochastic phenotype switching in bacteria},
+  author={Rainey, Paul B and Beaumont, Hubertus JE and Ferguson, Gayle C and Gallie, Jenna and Kost, Christian and Libby, Eric and Zhang, Xue-Xian},
+  booktitle={Microbial cell factories},
+  volume={10},
+  number={1},
+  pages={S14},
+  year={2011},
+  organization={BioMed Central}
+}
+
+@article{beaumont2009experimental,
+  title={Experimental evolution of bet hedging},
+  author={Beaumont, Hubertus JE and Gallie, Jenna and Kost, Christian and Ferguson, Gayle C and Rainey, Paul B},
+  journal={Nature},
+  volume={462},
+  number={7269},
+  pages={90},
+  year={2009},
+  publisher={Nature Publishing Group}
+}
+
+@inproceedings{blickle1995mathematical,
+  title={A Mathematical Analysis of Tournament Selection.},
+  author={Blickle, Tobias and Thiele, Lothar},
+  booktitle={ICGA},
+  pages={9--16},
+  year={1995},
+  organization={Citeseer}
+}
+
+
