Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -137,7 +137,9 @@ For each metric, we discuss its application and our intuition for what it can te
 %@ELD: I am in favor.
 In addition to demonstrating a range of metrics that are immediately applicable and useful to digital evolution research, we intend for this work to begin a conversation within the %computational evolution
 artificial life
-community about how we quantify, interpret, and compare observed evolutionary histories. There has been extensive efforts to improve our ability to visualize both lineages and phylogenies [CITATIONS], which are %incredibly valuable for building intuitions and qualitatively understanding the dynamics embedded in a population's evolutionary history. However, we are unaware of efforts to formalize a suite of quantitative lineage and phylogeny-related metrics for computation evolution. Indeed, .... % people have done stuff with lineages
+community about how we quantify, interpret, and compare observed evolutionary histories. There has been extensive efforts to improve our ability to visualize both lineages and phylogenies [CITATIONS], which are %incredibly valuable 
+indespensible 
+for building intuitions and qualitatively understanding the dynamics embedded in a population's evolutionary history. However, we are unaware of efforts to formalize a suite of quantitative lineage and phylogeny-related metrics for computation evolution. Indeed, .... % people have done stuff with lineages
 % - often a component of a larger experiment-specific analysis or limited to qualitative descriptions/visualizations
 % - well-defined metrics not only provide valuable tools for teasing apart evolutionary dynamics, they also facilitate allow us to move away from exclusively qualitative descriptions/understandings of results ==> better quantitative understanding/statistics ==> better hypothesis testing
 % - facilitate comparisons among systems. 
